Fixed file structure mostly, need to fix application startup still