@@ -1,7 +1,5 @@
 package com.revature.project2backend.security;
 
-
-import com.sun.tools.javac.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -20,7 +18,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.Collections;
+
 
 @Configuration
 @EnableWebSecurity
@@ -68,12 +66,12 @@ public class SecurityConfig {
 
     @Bean
     CorsConfigurationSource corsConfigurationSource(){
-        CorsConfiguration configuration=  new CorsConfiguration();
+        CorsConfiguration configuration = new CorsConfiguration();
         //TODO: change allowed origin to hosted url later
         configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
         //TODO: update list if needed
         configuration.setAllowedMethods(Arrays.asList("GET","POST"));
-        configuration.setAllowedHeaders(List.of("Authorization"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         //cors on every endpoint, change if needed
         source.registerCorsConfiguration("/**", configuration);
